tests/fixtures/invalid/function_pointer_typedef_alias.c
typedef int (*Callback)(int);

int main(void) {
    return 0;
}
